--- a/basic.css
+++ b/basic.css
@@ -45,6 +45,11 @@ body{
 
 }
 
+#venta:hover{
+  opacity: 0.7;
+  cursor: pointer;
+}
+
 .cards-container {
     display: flex;
     flex-wrap: wrap;
@@ -102,3 +107,7 @@ body{
     }
   }
   
+  .text-center {
+    color: #fff;
+    text-align: center;
+  }
